# clion-windows-driver

./: CMakeLists.txt  README.md  create_certificate.ps1  windows_clangformat_script.bat
cmake/: FindWdk.cmake
src/: driver.c
